products/edge/4.1/licensing/index.md
# Licensing


Every Cribl Edge download package comes with a Free license that allows for processing of up to 1 TB/day. This license requires sending anonymized [Telemetry Data](#telemetry-data) to Cribl. 

Enterprise, Standard, and Sales Trial licenses are entitled to a defined, per-license daily ingestion volume. These licenses do not require sending telemetry metadata.

> This page does not apply to Cribl.Cloud plans. See [Deploy Cloud](deploy-cloud#enterprise) for information about the Cribl.Cloud Enterprise plan.  
>
{.box .cloud}

## Manage On-Prem Licenses – Adding and Renewing {#managing}

You can add and manage licenses on the Leader (or on a single-instance deployment) at **Settings** > **Global Settings** > **Licensing**. Click **Add License** to paste in a license key provided to you by Cribl.

This applies to Cribl Edge Standard and Enterprise licenses, which must be renewed annually. Free licenses are already onboard the download package, need not be added or managed here, and do not expire.

## Exemptions from License Quotas {#exemptions}

Data generated by [Cribl Internal](sources-cribl-internal) Sources normally does not count against your ingestion quota.

If you are connecting Workers/Edge Nodes in a Cribl Stream Cloud [hybrid deployment](/stream/deploy-cloud#hybrid), you are granted additional exemptions to prevent double billing: 
- Data transferred between Cribl Stream Workers via the [Cribl HTTP](sources-cribl-http) and [Cribl TCP](sources-cribl-tcp) Sources does not count against your ingestion quota.
- Data sent from Cribl Edge's [Cribl HTTP](destinations-cribl-http) and [Cribl TCP](destinations-cribl-tcp) Destinations to Cribl Stream is counted against quota only in Cribl Edge.
- Data generated by [Datagens](sources-datagens) does not count against your ingestion quota.

## License Types

Cribl offers several Cribl Edge license types including Enterprise, Standard, and Free. For a current list of available license types and a detailed comparison of what's included in each, see Cribl [Pricing](https://cribl.io/pricing/). 

## Combining License Types {#fallback}

Multiple license types can coexist on an instance. However, only a **single type** of license can be effective at any one time. When multiple types coexist, the following method of resolution is used:

 * If there are any unexpired Enterprise or Standard licenses – use only these licenses to compute the effective license.
 * Else, if there are any Sales Trial licenses – use only Sales Trial licenses to compute the effective license.
 * Else, if there exists a Free license – use only the Free license to compute the effective license.

### License Expiration {#when-licenses-expire}

When an Enterprise or Standard license expires, you can remove the old license to fall back to the Sales Trial or Free type.

To do so, go to **Settings** > **Licensing**, locate your expired license, and click **Delete license**.
Next, restart the Leader.

An expired Sales Trial license cannot fall back to a Free license.

> Upon expiration of a paid license, if there is no fallback license, Cribl Edge will backpressure and block all incoming data.
>
{.box .warning}

## Licensing in Distributed Deployments

With licenses that limit the number of Worker Processes/​Edge Nodes, Cribl Edge will attempt to balance or rebalance Worker Processes (threads) as evenly as possible across all licensed Edge Nodes.

You configure licensing only on the Leader Node. (See [Managing Licenses – Adding and Renewing](#managing).) The Leader will push license information down to Fleets as part of the heartbeat ([Stream](/stream/deploy-distributed#leaderworker-node-communication), [Edge](/edge/setting-up-leader-and-edge-nodes)). There is no need to configure or store licenses directly on Edge Nodes.

## Telemetry Data {#telemetry-data}

A **Free** license requires sharing of telemetry **metadata** with Cribl. Cribl uses this metadata to help us understand how to improve the product and prioritize new features. 

Telemetry payloads are sent from all Cribl Edge nodes (Leader and Workers), to an endpoint located at `https://cdn.cribl.io/telemetry/`.

### Testing the Telemetry Endpoint's Connectivity

To manually test connectivity to the telemetry endpoint, especially if you are needing to configure a proxy, you can use the following command:

`$ curl https://cdn.cribl.io/telemetry/`

Expected response:

`cribl /// living the stream!`

If you get a 302 response code, check whether you've omitted the URL's trailing `/`.

### Disabling Telemetry and Live Help

With an Enterprise or Standard license, you have the option to disable telemetry sharing from on-prem Cribl Edge. With a Free license, disabling telemetry will cause Cribl Edge to block inbound traffic within 24 hours.

If you would like an exception to disable telemetry in order to deploy in your environment, please contact Cribl Sales at sales@cribl.io, and we will work with you to issue licenses on a case-by-case basis. 

Once you have received a license that removes the telemetry requirement, you can disable telemetry in Cribl Edge's UI at **Settings** > **Global Settings** > **System > General > Upgrade & Share Settings > Sharing and Live Help**. Toggle the slider to **No**.

![Sharing and Live Help toggle](telemetry&intercom-disable.026ccf8b3e.png)
{scale="70%" border="true"}

### Metadata Shared Through Telemetry

Your Cribl Edge instance shares the following metadata with Cribl per interval (roughly, every minute):

  * Version
  * Instance's GUID
  * License ID
  * Earliest, Latest Time
  * Number of Events In and Out, overall and by Source type and Destination type
  * Number of Bytes In and Out, overall and by Source type and Destination type
  * Number of Open, Closed, Active Connections
  * Number of Routes
  * Number of Pipelines

### How We Use Telemetry Data

With telemetry enabled, Cribl software sends usage data directly to Cribl. We securely store and encrypt this data on Cribl-managed servers, with restricted access.

Cribl fully anonymizes and aggregates this usage data in our systems of analysis. There, we use the aggregated metrics to improve Cribl products and services by analyzing circumstances around disruptions, opportunities for ingest efficiencies, and ways to optimize performance. Access is restricted to only those Cribl employees and contractors who require anonymized data to perform their jobs.

Cribl collects License IDs only to ensure that all data is being sent by a Cribl product. These IDs cannot be used to personally identify any user of Cribl software or Cribl cloud services.

For further details, see the [Cribl Privacy Policy](https://cribl.io/legal/privacy-policy/).

## Licensing FAQ {#faq}

**How do I check my license type, restrictions, and/or expiration date?**

Open Cribl Edge's **Settings** > **Global Settings** > **Licensing** page to see these details.

**How can I track my actual data ingestion volume over the last 30 days?**

Use the dashboard at **Monitoring** > **System** > **Licensing** to review your license consumption. For higher-fidelity metrics, you can enable the [Cribl Internal](sources-cribl-internal) Source's CriblMetrics option to forward metrics to your metrics Destination of choice, and run a report on `cribl.total.in_bytes`.

**How does Cribl enforce license limits?**

If your data throughput exceeds your license quota: 

* Free and Standard licenses enforce data ingestion quotas through limits on the number of Worker Groups/Fleets and Worker/Edge Node Processes.

* Enterprise license keys turn off all enforcement.

* When an Enterprise or Standard license expires, Cribl Edge will attempt to fall back to a trial or free license, or – only if that fails – will block incoming data. For details, see [Combining License Types](#fallback).


**I'm using LogStream 2.3.0 or higher, with its "permanent, Free" license. Why is LogStream claiming an expired license, and blocking inputs?**

This can happen if you've upgraded from a LogStream version below 2.3.0, in which you previously entered this earlier version's Free (time-limited) license key. To remedy this, go to **Settings** > **Global Settings** > **Licensing**, click to select and expand your expired Free license, and then click **Delete license**. Cribl Edge will fall back to the new, permanent Free license behavior, and will restore throughput.

**If I pull data from compressed S3 buckets, is my license quota applied to the compressed or the uncompressed size of the file objects?**

To measure license consumption, Cribl Edge uses the uncompressed size.



## Troubleshooting Resources {#troubleshooting}

[Cribl University](https://cribl.io/university/) offers a Troubleshooting Criblet on [Switching from Free to Enterprise](https://university.cribl.io/#/online-courses/910a52c9-6294-4f4a-b3fb-eff9dcd4e901). To follow the direct course link, first log into your Cribl University account. (To create an account, select the **Sign up** link. You’ll need to click through a short **Terms & Conditions** presentation, with chill music, before proceeding to courses – but Cribl’s training is always free of charge.) Once logged in, check out other useful [Troubleshooting Criblets](https://university.cribl.io/#/curricula/2574ac50-05a3-4b50-8990-fcfa58a2aec0) and [Advanced Troubleshooting](https://university.cribl.io/#/curricula/4d42b5c4-5157-4c49-8322-89d16fad5b73) short courses.